...
        <item quantity="other">last seen %d minutes ago</item>
    </plurals>
    <plurals name="status_last_seen_hours">
        <item quantity="one">last seen %d hour ago</item>
        <item quantity="other">last seen %d hours ago</item>
    </plurals>
    <string name="media_preview_close">Close</string>
    <string name="service_you">You</string>
    <string name="service_someone">Someone</string>
    <string name="service_unknown">Service message</string>
    <string name="service_empty"></string>
    <string name="service_create">%1$s created the group «%2$s»</string>
    <string name="service_title">%1$s changed the group name to «%2$s»</string>
...
