...
    <plurals name="dialog_messages_selected">
        <item quantity="one">%1$d message selected</item>
        <item quantity="other">%1$d messages selected</item>
    </plurals>
    <string name="dialog_select_all">Select all</string>
    <string name="dialog_select_done">Done</string>
    <string name="dialog_format">Format</string>
    <string name="dialog_format_back">Back</string>
    <string name="dialog_format_bold">Bold</string>
    <string name="dialog_format_italic">Italic</string>
    <string name="dialog_format_code">Code</string>
    <string name="dialog_format_strike">Strikethrough</string>
    <string name="dialog_format_spoiler">Spoiler</string>
    <string name="dialog_format_quote">Quote</string>
    <string name="dialog_format_link">Link</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_forward">Forward</string>
    <string name="dialog_forward_to">Forward to</string>
    <string name="dialog_forwarding">Forwarding</string>
    <string name="dialog_forward_search">Search chats</string>
    <string name="dialog_forward_empty">No chats you can send to</string>
    <string name="dialog_forwarded">Forwarded to %1$s</string>
    <string name="dialog_delete_confirm">Delete this message?</string>
...
